fix: 修复 CI 构建脚本跨平台兼容性
- rustc 路径改为 PATH 查找，不再硬编码
- cp -r 改为 fs.cpSync 兼容 Windows
- workflow 移除多余 env PATH 配置

--- a/.github/workflows/build-desktop.yml
+++ b/.github/workflows/build-desktop.yml
@@ -35,14 +35,11 @@ jobs:
         run: pnpm install
 
       - name: Install server dependencies
-        run: |
-          cd server
-          pnpm install
+        working-directory: server
+        run: pnpm install
 
       - name: Build server sidecar
-        run: node scripts/build-server.js x86_64-pc-windows-msvc
-        env:
-          PATH: ${{ env.PATH }}
+        run: node scripts/build-server.js
 
       - name: Build Tauri app (Windows)
         uses: tauri-apps/tauri-action@v0
@@ -86,9 +83,8 @@ jobs:
         run: pnpm install
 
       - name: Install server dependencies
-        run: |
-          cd server
-          pnpm install
+        working-directory: server
+        run: pnpm install
 
       - name: Build server sidecar
         run: node scripts/build-server.js
