fix: CI 构建修复 - pnpm build scripts 权限 + tauriScript
- package.json 添加 pnpm.onlyBuiltDependencies 允许 esbuild 和 @tauri-apps/cli
- workflow 添加 tauriScript: pnpm tauri 确保使用本地 CLI

--- a/.github/workflows/build-desktop.yml
+++ b/.github/workflows/build-desktop.yml
@@ -47,6 +47,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         with:
+          tauriScript: pnpm tauri
           tagName: ${{ github.ref_name }}
           releaseName: 'AIYOU v__VERSION__'
           releaseBody: 'AIYOU 桌面版'
@@ -95,6 +96,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         with:
+          tauriScript: pnpm tauri
           tagName: ${{ github.ref_name }}
           releaseName: 'AIYOU v__VERSION__'
           releaseBody: 'AIYOU 桌面版'
