--- a/.github/workflows/build-desktop.yml
+++ b/.github/workflows/build-desktop.yml
@@ -41,18 +41,25 @@ jobs:
       - name: Build server sidecar
         run: node scripts/build-server.js
 
-      - name: Build Tauri app (Windows)
-        uses: tauri-apps/tauri-action@v0
+      - name: Build Tauri app
+        run: pnpm tauri build
+
+      - name: Upload Windows installer
+        uses: actions/upload-artifact@v4
+        with:
+          name: windows-installer
+          path: |
+            src-tauri/target/release/bundle/nsis/*.exe
+
+      - name: Create or update release
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v2
+        with:
+          draft: true
+          files: |
+            src-tauri/target/release/bundle/nsis/*.exe
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-        with:
-          tauriScript: pnpm tauri
-          tagName: ${{ github.ref_name }}
-          releaseName: 'AIYOU v__VERSION__'
-          releaseBody: 'AIYOU 桌面版'
-          releaseDraft: true
-          prerelease: false
 
   build-macos:
     runs-on: macos-latest
@@ -90,16 +97,22 @@ jobs:
       - name: Build server sidecar
         run: node scripts/build-server.js
 
-      - name: Build Tauri app (macOS Universal)
-        uses: tauri-apps/tauri-action@v0
+      - name: Build Tauri app (Universal)
+        run: pnpm tauri build --target universal-apple-darwin
+
+      - name: Upload macOS installer
+        uses: actions/upload-artifact@v4
+        with:
+          name: macos-installer
+          path: |
+            src-tauri/target/universal-apple-darwin/release/bundle/dmg/*.dmg
+
+      - name: Create or update release
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v2
+        with:
+          draft: true
+          files: |
+            src-tauri/target/universal-apple-darwin/release/bundle/dmg/*.dmg
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-        with:
-          tauriScript: pnpm tauri
-          tagName: ${{ github.ref_name }}
-          releaseName: 'AIYOU v__VERSION__'
-          releaseBody: 'AIYOU 桌面版'
-          releaseDraft: true
-          prerelease: false
-          args: --target universal-apple-darwin
