--- a/.github/workflows/build-desktop.yml
+++ b/.github/workflows/build-desktop.yml
@@ -45,7 +45,10 @@ jobs:
         run: node scripts/build-server.js
 
       - name: Verify sidecar files
-        run: dir src-tauri\binaries\ /b
+        run: |
+          dir src-tauri\binaries\ /b
+          echo ---
+          dir src-tauri\binaries\aiyou-server-*.exe /b 2>nul || echo "No .exe sidecar found"
         shell: cmd
 
       - name: Build frontend
